--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,7 +19,7 @@
 	<meta property="og:site_name" content="BD API" />
 	<link rel="canonical" href="https://bdapis.herokuapp.com/" />
 
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
     <title>BD API | RestAPI Service</title>
 </head>
 <body>
@@ -215,63 +215,7 @@
                         <pre>https://bdapis.herokuapp.com/api/v1.1/divisions</pre>
                     </div>
                     <pre class="example-pre">
-{
-	"status": {
-		"code": 200,
-		"message": "ok",
-		"date": "Wed, 12 May 2021 05:39:36 GMT"
-	},
-	"data": [
-		{
-			"_id": "barishal",
-			"division": "Barishal",
-			"divisionbn": "বরিশাল",
-			"coordinates": "22.3811, 90.3372"
-		},
-		{
-			"_id": "chattogram",
-			"division": "Chattogram",
-			"divisionbn": "চট্টগ্রাম",
-			"coordinates": "23.1793, 91.9882"
-		},
-		{
-			"_id": "dhaka",
-			"division": "Dhaka",
-			"divisionbn": "ঢাকা",
-			"coordinates": "23.9536, 90.1495"
-		},
-		{
-			"_id": "khulna",
-			"division": "Khulna",
-			"divisionbn": "খুলনা",
-			"coordinates": "22.8088, 89.2467"
-		},
-		{
-			"_id": "mymensingh",
-			"division": "Mymensingh",
-			"divisionbn": "ময়মনসিংহ",
-			"coordinates": "24.7136, 90.4502"
-		},
-		{
-			"_id": "rajshahi",
-			"division": "Rajshahi",
-			"divisionbn": "রাজশাহী",
-			"coordinates": "24.7106, 88.9414"
-		},
-		{
-			"_id": "rangpur",
-			"division": "Rangpur",
-			"divisionbn": "রংপুর",
-			"coordinates": "25.8483, 88.9414"
-		},
-		{
-			"_id": "sylhet",
-			"division": "Sylhet",
-			"divisionbn": "সিলেট",
-			"coordinates": "24.7050, 91.6761"
-		}
-	]
-}
+						<%= allDivisions %>
                     </pre>
                 </div>
 
@@ -281,129 +225,7 @@
                         <pre>https://bdapis.herokuapp.com/api/v1.1/division/rangpur</pre>
                     </div>
                     <pre class="example-pre">
-{
-	"status": {
-		"code": 200,
-		"message": "ok",
-		"date": "Wed, 12 May 2021 05:48:38 GMT"
-	},
-	"data": [
-		{
-			"_id": "dinajpur",
-			"district": "Dinajpur",
-			"coordinates": "25.6279, 88.6332",
-			"upazilla": [
-				"Birampur",
-				"Birganj",
-				"Biral",
-				"Bochaganj",
-				"Chirirbandar",
-				"Dinajpur Sadar",
-				"Ghoraghat",
-				"Hakimpur",
-				"Kaharole",
-				"Khansama",
-				"Nawabganj",
-				"Parbatipur",
-				"Phulbari"
-			]
-		},
-		{
-			"_id": "gaibandha",
-			"district": "Gaibandha",
-			"coordinates": "25.3297, 89.5430",
-			"upazilla": [
-				"Phulchhari",
-				"Gaibandha Sadar",
-				"Gobindaganj",
-				"Palashbari",
-				"Sadullapur",
-				"Sughatta",
-				"Sundarganj"
-			]
-		},
-		{
-			"_id": "kurigram",
-			"district": "Kurigram",
-			"coordinates": "25.8072, 89.6295",
-			"upazilla": [
-				"Bhurungamari",
-				"Char Rajibpur",
-				"Chilmari",
-				"Kurigram Sadar",
-				"Nageshwari",
-				"Phulbari",
-				"Rajarhat",
-				"Raomari",
-				"Ulipur"
-			]
-		},
-		{
-			"_id": "lalmonirhat",
-			"district": "Lalmonirhat",
-			"coordinates": "25.9923, 89.2847",
-			"upazilla": [
-				"Aditmari",
-				"Hatibandha",
-				"Kaliganj",
-				"Lalmonirhat Sadar",
-				"Patgram"
-			]
-		},
-		{
-			"_id": "nilphamari",
-			"district": "Nilphamari",
-			"coordinates": "25.8483, 88.9414",
-			"upazilla": [
-				"Dimla",
-				"Domar",
-				"Jaldhaka",
-				"Kishoreganj",
-				"Nilphamari Sadar",
-				"Saidpur"
-			]
-		},
-		{
-			"_id": "panchagarh",
-			"district": "Panchagarh",
-			"coordinates": "26.2709, 88.5952",
-			"upazilla": [
-				"Atwari",
-				"Boda",
-				"Debiganj",
-				"Panchagarh Sadar",
-				"Tetulia"
-			]
-		},
-		{
-			"_id": "rangpur",
-			"district": "Rangpur",
-			"coordinates": "25.7468, 89.2508",
-			"upazilla": [
-				"Badarganj",
-				"Gangachhara",
-				"Kaunia",
-				"Mithapukur",
-				"Pirgachha",
-				"Pirganj",
-				"Rangpur Sadar",
-				"Taraganj"
-			]
-		},
-		{
-			"_id": "thakurgaon",
-			"district": "Thakurgaon",
-			"coordinates": "26.0418, 88.4283",
-			"upazilla": [
-				"Baliadangi",
-				"Haripur",
-				"Pirganj",
-				"Ranisankail",
-				"Thakurgaon Sadar"
-			]
-		}
-	]
-}
+						<%= divisionDetails %>
                     </pre>
 				</div>
 				
@@ -425,9 +247,7 @@
         <p>Copyright &copy; 2020, <a href="https://abmsourav.com">Keramot UL Islam</a> </p>
     </footer>
 
-    <!-- <script src="https://myCDN.com/prism@v1.x/components/prism-core.min.js"></script>
-	<script src="https://myCDN.com/prism@v1.x/plugins/autoloader/prism-autoloader.min.js"></script> -->
 	<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
-	<script src="assets/js/main.js"></script>
+	<script src="../assets/js/main.js"></script>
 </body>
 </html>
