--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -45,6 +45,11 @@
                     Divisions, Districts, Upazilla, Thana, Post Office, Post Code etc of Bangladesh are available in Bangla and English within endpoints.      
                 </p>
                 <p><strong>v1.x is a MVP</strong> of this project and also Open-source. Built with NodeJS, ExpressJS, MongoDB, Heroku. Looking for Sponsor/Investor for full project. Contact <a target="_blank" href="https://m.me/sourav926">Here</a>.</p>
+
+				<p>
+					BD API is now also available on "Rapid API" market place. 
+					<a href="https://rapidapi.com/AbmSourav/api/bdapi">Click Here</a>
+				</p>
             </div>
 
             <div class="doc">
