google analytics added

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,6 +19,15 @@
 	<meta property="og:site_name" content="BD API" />
 	<link rel="canonical" href="https://bdapis.herokuapp.com/" />
 
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-0M7ERHP8HZ"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-0M7ERHP8HZ');
+	</script>
+
 	<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
     <title>BD API | RestAPI Service</title>
 </head>
