--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -57,12 +57,13 @@
                     BD API is a RestAPI service. Developed by <a href="mailto:keramotul.islam@gmail.com?subject=BD API">Keramot UL Islam.</a><br>
                     Divisions, Districts, Upazilla, Thana, Post Office, Post Code etc of Bangladesh are available in Bangla and English within endpoints.      
                 </p>
-                <p><strong>v1.x is a MVP</strong> of this project and also Open-source. Built with NodeJS, ExpressJS, MongoDB, Heroku. Looking for Sponsor/Investor for full project. Contact <a target="_blank" href="https://m.me/sourav926">Here</a>.</p>
+                <p><strong>v1.x is a MVP</strong> of this project and also open-source and v1.x will always remain open-source.</p>
+				<p>Do you wanto to become Sponsor/Investor for full project? Contact <a target="_blank" href="https://m.me/sourav926">Here</a>.</p>
 
-				<p>
+				<!-- <p>
 					BD API is now also available on "Rapid API" market place. 
 					<a href="https://rapidapi.com/AbmSourav/api/bdapi">Click Here</a>
-				</p>
+				</p> -->
             </div>
 
             <div class="doc">
@@ -71,8 +72,6 @@
                 <div class="routes">
                     <p>
 						Base URL: <code>https://bdapis.com/</code>
-						<br />
-						<span class="base-url-notice">The base url is recently updated. If you're using old url [bdapis.herokuapp.com] then please update that with the above url.</span>
 					</p>
                     <p>Namespace: <code>/api</code></p>
                     <p>Version: Version number. For Example: <code>/v1.1</code></p>
@@ -266,7 +265,16 @@
     </div>
 
     <footer>
-        <p>Copyright &copy; 2020, <a href="https://abmsourav.com">Keramot UL Islam</a> </p>
+		<div class="sponsor">
+			<h2>Sponsors</h2>
+			<div class="sponsor-list">
+				<a href="https://www.exonhost.com/" target="_blank">
+					<img src="assets/img/ExonHost-logo.png" alt="ExonHost">
+				</a>
+			</div>
+		</div>
+
+        <p class="copyright">Copyright &copy; 2020 - 2024, <a class="author" href="https://abmsourav.com">Keramot UL Islam</a> </p>
     </footer>
 
 	<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
