postman doc mentioned in landing page

--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -114,6 +114,10 @@ pre {
     margin-bottom: 35px;
 }
 
+.post-man-doc {
+    margin: 80px 0;
+}
+
 .select-version-wrap > strong {
 	margin-bottom: 10px;
 }
