--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -57,8 +57,10 @@
                     BD API is a RestAPI service. Developed by <a href="mailto:keramotul.islam@gmail.com?subject=BD API">Keramot UL Islam.</a><br>
                     Divisions, Districts, Upazilla, Thana, Post Office, Post Code etc of Bangladesh are available in Bangla and English within endpoints.      
                 </p>
-                <p><strong>v1.x is a MVP</strong> of this project and also open-source and v1.x will always remain open-source.</p>
-				<p>Do you wanto to become Sponsor/Investor for full project? Contact <a target="_blank" href="https://m.me/sourav926">Here</a>.</p>
+                <p>
+					<strong>v1.x is a MVP</strong> of this project and also open-source and v1.x will always remain open-source.
+				
+					Do you wanto to become Sponsor/Investor for full project? Contact <a target="_blank" href="https://m.me/sourav926">Here</a>.</p>
 
 				<!-- <p>
 					BD API is now also available on "Rapid API" market place. 
@@ -164,6 +166,14 @@
 								</div>
 							</div>
 						</template>
+
+						<div class="post-man-doc">
+							<h2 class="title-heading" id="postman-doc"><a class="ref-hook" href="#postman-doc">#</a>Postman Documentation</h2>
+							<p>
+								Find more information in the Postman Documentation 
+								<a href="https://documenter.getpostman.com/view/7856105/2sA3JNbfos" target="_blank">Here</a>.
+							</p>
+						</div>
                     </div>
 
                     <div class="route route-v2">
@@ -274,7 +284,9 @@
 			</div>
 		</div>
 
-        <p class="copyright">Copyright &copy; 2020 - 2024, <a class="author" href="https://abmsourav.com">Keramot UL Islam</a> </p>
+        <p class="copyright">
+			Copyright &copy; 2020 - 2024, Developed with ❤️ by <a class="author" href="https://abmsourav.com">Keramot UL Islam</a>
+		</p>
     </footer>
 
 	<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
