--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -177,7 +177,7 @@ pre {
     background-color: #fff;
     box-shadow: 2px 2px 8px 4px rgb(0 0 0 / 9%);
     z-index: 5;
-    bottom: -100px;
+    top: 43px;
 }
 #dropdown li {
     list-style: none;
