single district route added in doc

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -199,6 +199,16 @@
 										upazilla: array/list
 									</pre>
 								</div>
+								<div class="route-detail">
+									<div class="route-name">Route: <code>/district/:districtName</code></div>
+									<div class="route-sort-description">All Upazilla of the given District</div>
+									<pre>
+										district: String
+										districtbn: String
+										coordinates: String
+										upazilla: array/list
+									</pre>
+								</div>
 							</div>
 						</template>
 
