--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -32,6 +32,11 @@
     <title>BD API | RestAPI Service</title>
 </head>
 <body>
+	<div class="notice">
+		<div>
+			📢 API new version v1.2 has been released. Previous versions 1.0 and 1.1 has been depricated.
+		</div>
+	</div>
 
     <div class="wrapper">
 
@@ -54,7 +59,7 @@
         <div class="container">
             <div class="intro">
                 <p>
-                    BD API is a RestAPI service. Developed by <a href="mailto:keramotul.islam@gmail.com?subject=BD API">Keramot UL Islam.</a><br>
+                    BD API is a RestAPI service. Developed by <a href="mailto:keramotul.islam@gmail.com?subject=BD API">Keramot UL Islam.</a>
                     Divisions, Districts, Upazilla, Thana, Post Office, Post Code etc of Bangladesh are available in Bangla and English within endpoints.      
                 </p>
                 <p>
