notice type fix

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -34,7 +34,7 @@
 <body>
 	<div class="notice">
 		<div>
-			📢 API new version v1.2 has been released. Previous versions 1.0 and 1.1 has been depricated.
+			📢 New API version v1.2 has been released. Previous versions 1.0 and 1.1 has been deprecated.
 		</div>
 	</div>
 
